# guile-msgpack-cpp-scratch

./: .gitignore  extension.cpp  guile_mpack_cpp.cpp  guile_object.hpp  guile_pack.hpp  guile_shared.hpp  guile_unpack.hpp  meson.build
misc/: test.scm
subprojects/: msgpack-cxx.wrap
